# travis

./: .gitmodules  LICENSE  README.md
darknet_ros/darknet_ros/config/: ros.yaml
scripts/: ip.py
slam_gmapping/gmapping/launch/: mapping.launch  slam_gmapping.launch
slam_gmapping/gmapping/src/: slam_gmapping.cpp
slam_toolbox/slam_toolbox/config/: mapper_params_lifelong.yaml  mapper_params_localization.yaml
teleop_twist_joy/config/: xbox.config.yaml
teleop_twist_joy/src/: teleop_twist_joy.cpp
travis-esp32/: CMakeLists.txt  Makefile  sdkconfig  sdkconfig.old
travis-esp32/components/travis-esp32/include/: rotary_encoder.h
travis-esp32/main/: CMakeLists.txt  esp_chatter.cpp  main.c
travis-esp32/main/include/: esp_chatter.h
travis_control/: CMakeLists.txt  package.xml
travis_control/launch/: xbox.launch
travis_control/nodes/: xbox_teleop.py
travis_control/scripts/: odom_tf_pub.py
travis_description/: CMakeLists.txt  package.xml
travis_description/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
travis_description/launch/: amcl.launch  base.launch  bringup.launch  controller.launch  controller.yaml  display.launch  gazebo.launch  map.launch  rviz.launch  slam_nav.launch  urdf.rviz
travis_description/maps/: cafu_map.yaml  map.pgm
travis_description/meshes/: base_link.stl  base_plate2_1.stl  cam_mount_t_slot_1.stl  camera_1.stl  caster_base_1.stl  caster_swivel_1.stl  caster_wheel_1.stl  lidar_1.stl  motor_bracket_left_1.stl  motor_bracket_right_1.stl  motor_left_1.stl  motor_right_1.stl  rpi_cam_mount_1.stl  t_slot1_1.stl  t_slot2_1.stl  t_slot3_1.stl  wheel_left_1.stl  wheel_right_1.stl
travis_description/urdf/: materials.xacro  travis.gazebo  travis.trans  travis.xacro
travis_description/worlds/cafu_world/: model.config  model.sdf
