<?xml version="1.0"?>
<package format="2">
  <name>travis_description</name>
  <version>0.0.0</version>
<description>The travis_description package</description>

  <maintainer email="hunar.islam01@gmail.com">Hunar Islam</maintainer>

  <license>MIT</license>

  <depend>travis_control</depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
